# xannounce

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  configure.in
cfg/: .gitignore
code/: Makefile.am  xannounce.c  xannounce.h
doc/: Makefile.am  authors.sgml  changelog.sgml  compile.sgml  download.sgml  news.sgml  readme.sgml  screenshot.sgml  xannounce.p2w.sample
src/: Makefile.am  xannounce.c
