dnl Process this file with autoconf to produce a configure script.
AC_INIT(code/xannounce.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(xannounce,1.0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_LN_S
AC_CHECK_PROG(PROJ2WEB, proj2web, proj2web, "")
AM_CONDITIONAL(USEPROJ2WEB, test -n "$PROJ2WEB")
AC_CHECK_PROG(CVSLOG2SGML, cvslog2sgml, cvslog2sgml, "")
AM_CONDITIONAL(USECVSLOG2SGML, test -n "$CVSLOG2SGML")

AM_CONDITIONAL(CVSDIREXISTS, test -d "CVS")

dnl Checks for libraries.
AC_PATH_XTRA
AC_CHECK_LIB(X11, XOpenDisplay)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(X11/Xlib.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

if test -n "$PROG2WEB"; then
    CVS=changelog.sgml
    AC_SUBST(CVS)
fi

if test -n "$CVSLOG2SGML"; then
    P2W=Makefile.p2w
    AC_SUBST(P2W)
fi

AC_OUTPUT(Makefile code/Makefile doc/Makefile)
